# http-frontend

./: Cargo.toml  build.rs
app/: .angular-cli.json  .gitignore  angular.json  package-lock.json  package.json  proxy.conf.json
app/src/: styles.scss
app/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  queue.service.ts  socket.service.ts
app/src/app/header/: header.component.html  header.component.scss  header.component.ts
app/src/app/player/: player.component.html  player.component.scss  player.component.ts  player.module.ts  player.service.ts
app/src/app/playlists/: playlist.model.ts  playlists.service.ts
app/src/app/search/: search.component.html  search.component.scss  search.component.ts  search.module.ts  search.service.ts
app/src/app/shared/: shared.module.ts
src/: app.rs  lib.rs
src/actix/: mod.rs
src/api/: mod.rs
src/api/handler/: get_album.rs  list_albums.rs  list_artists.rs  list_playlists.rs  list_tracks.rs  mod.rs
src/api/viewmodels/: album.rs  artist.rs  mod.rs  player.rs
src/controller/: library.rs  mod.rs  player.rs  queue.rs  search.rs
src/handler/: add_queue.rs  get_album.rs  get_queue.rs  library.rs  list_albums.rs  list_artists.rs  list_playlists.rs  list_tracks.rs  mod.rs  player.rs  player_next.rs  player_pause.rs  player_play.rs  player_prev.rs  player_state.rs  queue.rs  search.rs
src/iron/: mod.rs
src/iron/api/: mod.rs
src/socket/: messages.rs  mod.rs  server.rs  session.rs
src/viewmodels/: album.rs  artist.rs  mod.rs  playlist.rs  search.rs  track.rs
(+35 files in other folders)
