[package]
name = "rustic-http-frontend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rayon = "0.9.0"
regex = "0.2"
iron = "0.6.0"
staticfile = "*"
router = "*"
mount = "*"
mime = "0.2.6"
url = "*"
slog = "2.1.1"

[dependencies.rustic-core]
git = "https://github.com/rustic-music-player/core"