[package]
name = "rustic-http-frontend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mime = "0.2.6"
slog = "2.1.1"
actix-web = "0.6"
url = "1.7"
log = "0.4"
failure = "0.1"
failure_derive = "0.1"

[dependencies.rustic-core]
git = "https://github.com/rustic-music-player/core"